# http-server

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test_routes.sh
demo/: fake.txt
inc/: client_handler.hpp  http_request.hpp  http_response.hpp  logger.hpp  router.hpp  socket.hpp  tcp_server.hpp
public/: about.html  forbidden.html  heres_the_thing.html  index.html
src/: client_handler.cpp  http_request.cpp  http_response.cpp  logger.cpp  main.cpp  router.cpp  socket.cpp  tcp_server.cpp
